# backend/gen/api/questions/generate.go
@@ -1,0 +1,2 @@
+//go:generate go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@v2.4.1 --config=codegen.yaml ../../../../api/services/questions.yaml
+package questions_gen
